# rfcli

./: Cargo.toml  README.md  cargo.toml  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2d2h5ckx94hcvk8hil6hi9mgcc6kqgvc-source  827a0bn36xvn21yy0hmvh58zgxscxjcp-source  9i3aic36dlc7g59rny06vck0pcjqz9ap-source
src/: main.rs
