[package]
name = "rfcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.10"
ollama-rs = "0.1" # For the TLDR functionality
tokio = { version = "1", features = ["full"] }
colored = "2.0"
regex = "1.10"
indicatif = "0.17"
textwrap = "0.16"
termsize = "0.1"
inquire = "0.7"
